# edge-ai-suites

./: README.md
.github/workflows/: documentation-check.yaml  industrial-edge-insights-time-series-tests.yml
education-ai-suite/: .gitignore  README.md
education-ai-suite/smart-classroom/: config.yaml
education-ai-suite/smart-classroom/api/: endpoints.py
education-ai-suite/smart-classroom/components/va/: va_pipeline_service.py
education-ai-suite/smart-classroom/components/va/csrc/: CMakeLists.txt  build_gvasmartclassroom.ps1  vcpkg.json
education-ai-suite/smart-classroom/content_search/: .gitignore  README.md  install.ps1  main.py  requirements.txt  start_services.py
education-ai-suite/smart-classroom/content_search/api/: .gitignore
education-ai-suite/smart-classroom/content_search/core/: checks.py  models.py
education-ai-suite/smart-classroom/content_search/crud/: task_crud.py
education-ai-suite/smart-classroom/content_search/services/: search_service.py  storage_service.py  task_service.py
education-ai-suite/smart-classroom/content_search/utils/: asset_service.py  chroma_service.py  core_models.py  core_responses.py  database.py  task_service.py
education-ai-suite/smart-classroom/docs/user-guide/: get-started.md  index.md  release-notes.md
health-and-life-sciences-ai-suite/multi_modal_patient_monitoring/: Makefile  README.md  docker-compose.yaml
health-and-life-sciences-ai-suite/multi_modal_patient_monitoring/configs/: model-config.yaml
health-and-life-sciences-ai-suite/multi_modal_patient_monitoring/docs/user-guide/: get-started.md  how-it-works.md  index.md  release-notes.md  run-multi-modal-app.md
health-and-life-sciences-ai-suite/multi_modal_patient_monitoring/helm/: README.md
health-and-life-sciences-ai-suite/multi_modal_patient_monitoring/helm/multi_modal_patient_monitoring/: values.yaml
manufacturing-ai-suite/: README.md
manufacturing-ai-suite/hmi-augmented-worker/docs/user-guide/: get-started.md  index.md
manufacturing-ai-suite/industrial-edge-insights-multimodal/: .env  docker-compose.yml  third-party-programs.txt
manufacturing-ai-suite/industrial-edge-insights-multimodal/docs/user-guide/: troubleshooting.md
manufacturing-ai-suite/industrial-edge-insights-multimodal/helm/: values.yaml
manufacturing-ai-suite/industrial-edge-insights-multimodal/helm/templates/: telegraf.yaml
manufacturing-ai-suite/industrial-edge-insights-multimodal/tests/functional/: test_docker_deployment_multimodal.py  (+1 more)
manufacturing-ai-suite/industrial-edge-insights-time-series/: .env  docker-compose.yml  third-party-programs.txt
manufacturing-ai-suite/industrial-edge-insights-time-series/helm/: README.md
manufacturing-ai-suite/industrial-edge-insights-vision/: README.md  benchmark_start.sh
metro-ai-suite/live-video-analysis/live-video-captioning/: .gitignore  AGENTS.md  README.md  compose.yaml
metro-ai-suite/metro-sdk-manager/scripts/: metro-gen-ai-sdk.sh  metro-vision-ai-sdk.sh  visual-ai-demo-kit.sh
metro-ai-suite/metro-vision-ai-app-recipe/: benchmark_start.sh
metro-ai-suite/smart-traffic-intersection-agent/chart/: Chart.yaml  values.yaml
metro-ai-suite/video-processing-for-nvr/docker/: build_sample.sh  docker-compose.yml  run.sh
robotics-ai-suite/: Makefile
robotics-ai-suite/components/adbscan/: README.md
robotics-ai-suite/components/multicam-demo/: pyproject.toml  requirements.txt
robotics-ai-suite/components/multicam-demo/config/: config_isx031_4cameras.js  config_ros2_v4l2_rs-color-0_1.js  config_ros2_v4l2_rs-color-0_2.js  config_ros2_v4l2_rs-color-0_3.js
robotics-ai-suite/components/multicam-demo/docs/: README.md
robotics-ai-suite/components/multicam-demo/humble/debian/: changelog  control  postinst  ros-humble-pyrealsense2-ai-demo.install  rules
robotics-ai-suite/components/multicam-demo/jazzy/debian/: changelog  control  postinst  ros-jazzy-pyrealsense2-ai-demo.install  rules
robotics-ai-suite/components/multicam-demo/scripts/: generate_ai_models.sh
robotics-ai-suite/components/multicam-demo/src/: setup.py  yolov8_model.pyx
robotics-ai-suite/components/multicam-demo/src/pyrealsense2_ai_demo/: images_capture.py  inference_manager.py  model.py  perf_visualizer.py
robotics-ai-suite/components/ros-kpi/: .gitignore  CHEATSHEET.txt  GRAFANA_QUICKSTART.md  INSTALL.md  Makefile  QUICKSTART.md  README.md  auto-setup.sh  demo_interactive_heatmap.py  docker-compose.yml  pyproject.toml  quickstart  setup_ros2_env.sh  start_grafana.sh  stop_grafana.sh
robotics-ai-suite/docs/: conf.py  index.rst_  legal.rst  troubleshooting.md
robotics-ai-suite/docs/embodied/: developer_tools_tutorials.md  fragment_packages-jammy.rst  index.rst  installation_setup.md  installation_setup.rst  model_tutorials.md  openvino_optimization.rst  packages_list.md
robotics-ai-suite/docs/robotics/: index.rst  release-notes.md
robotics-ai-suite/docs/rvc/: index.rst
robotics-ai-suite/pipelines/act-sample/: README.md
robotics-ai-suite/pipelines/orb-slam3-sample/: README.md
robotics-ai-suite/robot-vision-control/docs/: README.md
(+367 files in other folders)
